--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,27 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://malrajmund.github.io/myPortfolio/favicon.ico?v=2 />
+    <link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="%PUBLIC_URL%/apple-touch-icon.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  href="%PUBLIC_URL%/favicon-32x32.png"
+  sizes="32x32"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  href="%PUBLIC_URL%/favicon-16x16.png"
+  sizes="16x16"
+/>
+<link
+  rel="mask-icon"
+  href="%PUBLIC_URL%/safari-pinned-tab.svg"
+  color="#5b
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
