--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://malrajmund.github.io/myPortfolio/favicon.ico?v=2 />
+    <link rel="icon" href="https://malrajmund.github.io/myPortfolio/favicon.ico?v=2" />
     <link
   rel="apple-touch-icon"
   sizes="180x180"
@@ -33,7 +33,7 @@
       name="description"
       content="Rajmund Malec's portfolio webpage."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+ 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
