--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://malrajmund.github.io/myPortfolio/favicon.ico?v=2" />
-    <link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="%PUBLIC_URL%/apple-touch-icon.png"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  href="%PUBLIC_URL%/favicon-32x32.png"
-  sizes="32x32"
-/>
-<link
-  rel="icon"
-  type="image/png"
-  href="%PUBLIC_URL%/favicon-16x16.png"
-  sizes="16x16"
-/>
-<link
-  rel="mask-icon"
-  href="%PUBLIC_URL%/safari-pinned-tab.svg"
-  color="#5b
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -38,7 +23,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
